# eg4heatpumptuyatomqtt

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  devices.json.example  docker-compose.yml
.claude/: settings.json
reverse-engineering/: PROTOCOL.md  analyze_capture.py  deep_dp_analysis.py  uart_capture_20260218_182150.json  uart_capture_20260218_184142.json  uart_capture_20260218_192800.json  uart_sniffer.py  verify_power_model.py
src/: config.rs  main.rs
src/mqtt/: client.rs
src/tuya/: client.rs  mod.rs
