[package]
name = "tuya-to-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-async-tuyapi = "1.2"
rumqttc = "0.24"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
